[tool.poetry]
name = "binkbot_sprites"
version = "0.1.0"
description = ""
authors = ["Z1R343L <jan2705g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
black = "\b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
